5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1638_651.log
== SUBMITION (2019-04-16 00:34:21) 
-- CODE:
h = float(input("Digite a altura:"))
sexo = input ("Digite o sexo da pessoa?(M/F) ")
homens = (72.7*h)-58
mulheres = (62.1*h)-44.7
if (sexo == "H"):
	print (round(homens,2))
else (sexo == "F"):
	print (round(mulheres,2))
-- EXECUTION TIME:
0.200041
-- ERROR:
  File "/home/codebench/codes/1638/651/main.py", line 7
    else (sexo == "F"):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:34:29) 
-- CODE:
h = float(input("Digite a altura:"))
sexo = input ("Digite o sexo da pessoa?(M/F) ")
homens = (72.7*h)-58
mulheres = (62.1*h)-44.7
if (sexo == "H"):
	print (round(homens,2))
else (sexo == "F"):
	print (round(mulheres,2))
-- ERROR:
File "XXXX", line 7
    else (sexo == "F"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:35:05) 
-- CODE:
h = float(input("Digite a altura:"))
sexo = input ("Digite o sexo da pessoa?(M/F) ")
homens = (72.7*h)-58
mulheres = (62.1*h)-44.7
if (sexo == H):
	print (round(homens,2))
else (sexo == F):
	print (round(mulheres,2))
-- ERROR:
File "XXXX", line 7
    else (sexo == F):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:36:27) 
-- CODE:
h = float(input("Digite a altura:"))
sexo = input ("Digite o sexo da pessoa?(M/F) ")
homens = (72.7*h)-58
mulheres = (62.1*h)-44.7
if (sexo=="H"):
	print (round(homens,2))
else (sexo=="F"):
	print (round(mulheres,2))
-- ERROR:
File "XXXX", line 7
    else (sexo=="F"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:36:40) 
-- CODE:
h = float(input("Digite a altura:"))
sexo = input ("Digite o sexo da pessoa?(M/F) ")
homens = (72.7*h)-58
mulheres = (62.1*h)-44.7
if (sexo=="H"):
	print (round(homens,2))
else (sexo=="M"):
	print (round(mulheres,2))
-- ERROR:
File "XXXX", line 7
    else (sexo=="M"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:37:12) 
-- CODE:
h = float(input("Digite a altura:"))
sexo = input ("Digite o sexo da pessoa?(M/F) ")
homens = (72.7*h)-58
mulheres = (62.1*h)-44.7
if (sexo=="H"):
	print (round(homens,2))
else:
	print (round(mulheres,2))
-- EXECUTION TIME:
0.200113
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.93
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:37:14) 
-- CODE:
h = float(input("Digite a altura:"))
sexo = input ("Digite o sexo da pessoa?(M/F) ")
homens = (72.7*h)-58
mulheres = (62.1*h)-44.7
if (sexo=="H"):
	print (round(homens,2))
else:
	print (round(mulheres,2))
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:38:41) 
-- CODE:
h = float(input("Digite a altura:"))
sexo = input ("Digite o sexo da pessoa?(M/F) ")
homens = (72.7*h)-58
mulheres = (62.1*h)-44.7
if (sexo=="H"):
	print (round(homens,2))
else:
	print (round(mulheres,2))
-- EXECUTION TIME:
0.143969
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.93
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:40:16) 
-- CODE:
h = float(input("Digite a altura:"))
sexo = input ("Digite o sexo da pessoa?(H/M) ")
mulheres = (62.1*h)-44.7
if (sexo=="H"):
	homens = (72.7*h)-58
	print (round(homens,2))
else:
	mulheres = (62.1*h)-44.7
	print (round(mulheres,2))
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:40:46) 
-- CODE:
h = float(input("Digite a altura:"))
sexo = input ("Digite o sexo da pessoa?(H/M) ")
mulheres = (62.1*h)-44.7
if (sexo=="H"):
	homens = (72.7*h)-58
	print (round(homens,2))
else(sexo=="M")
	mulheres = (62.1*h)-44.7
	print (round(mulheres,2))
-- ERROR:
File "XXXX", line 7
    else(sexo=="M")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:41:08) 
-- CODE:
h = float(input("Digite a altura:"))
sexo = input ("Digite o sexo da pessoa?(H/M) ")
mulheres = (62.1*h)-44.7
if (sexo=="H"):
	homens = (72.7*h)-58
	print (round(homens,2))
#else(sexo=="M")
	mulheres = (62.1*h)-44.7
	print (round(mulheres,2))
-- ERROR:
File "XXXX", line 7
    else(sexo=="M")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:41:30) 
-- CODE:
h = float(input("Digite a altura:"))
sexo = input ("Digite o sexo da pessoa?(H/M) ")
mulheres = (62.1*h)-44.7
if (sexo=="H"):
	homens = (72.7*h)-58
	print (round(homens,2))
#else(sexo=="M")
	mulheres = (62.1*h)-44.7
	print (round(mulheres,2))
-- ERROR:
File "XXXX", line 7
    else(sexo=="M")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:42:44) 
-- CODE:
h = float(input("Digite a altura:"))
sexo = input ("Digite o sexo da pessoa?(M / H) ")
mulheres = (62.1*h)-44.7
if (sexo=="H"):
	homens = (72.7*h)-58
	print (round(homens,2))
else (sexo=="M")
	mulheres = (62.1*h)-44.7
	print (round(mulheres,2))
-- ERROR:
File "XXXX", line 7
    else (sexo=="M")
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:43:00) 
-- CODE:
h = float(input("Digite a altura:"))
sexo = input ("Digite o sexo da pessoa?(M / H) ")
mulheres = (62.1*h)-44.7
if (sexo =="H"):
	homens = (72.7*h)-58
	print (round(homens,2))
else (sexo =="M")
	mulheres = (62.1*h)-44.7
	print (round(mulheres,2))
-- ERROR:
File "XXXX", line 7
    else (sexo =="M")
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:43:19) 
-- CODE:
h = float(input("Digite a altura:"))
sexo = input ("Digite o sexo da pessoa?(M/H) ")
mulheres = (62.1*h)-44.7
if (sexo =="H"):
	homens = (72.7*h)-58
	print (round(homens,2))
else (sexo =="M")
	mulheres = (62.1*h)-44.7
	print (round(mulheres,2))
-- ERROR:
File "XXXX", line 7
    else (sexo =="M")
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:43:34) 
-- CODE:
h = float(input("Digite a altura:"))
sexo = input ("Digite o sexo da pessoa?(M/H) ")
mulheres = (62.1*h)-44.7
if (sexo =="H"):
	homens = (72.7*h)-58
	print (round(homens,2))
else:
	mulheres = (62.1*h)-44.7
	print (round(mulheres,2))
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:44:17) 
-- CODE:
h = float(input("Digite a altura:"))
sexo = input ("Digite o sexo da pessoa?(M/H) ")
mulheres = (62.1*h)-44.7
if (sexo =="M"):
	homens = (72.7*h)-58
	print (round(homens,2))
else:
	mulheres = (62.1*h)-44.7
	print (round(mulheres,2))
-- EXECUTION TIME:
0.195873
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
